repo-layout/css/link.css
.chevron {
	background-repeat: no-repeat;
	background-image: url(../../assets/chevron@2x.png);
	background-position-x: 100%;
	background-position-y: center;
	background-size: 10px 13px;
}

li.link-inner {
	display: inline-block;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
}

.link-inner > div {
	display: inline-block;
	width: 100%;
}

.link-inner > div > label {
	color: #000;
	font-family: Arial, -apple-system-font;
}

img.icon {
	height: auto;
	/* XXX: small differences due to font bugs */
	margin: -7px 6px -9px 5px; /*June*/
	max-height: 30px;
	min-width: 30px;
	width: 30px;
}

p {
	font-weight: 300;
}

.link {
	text-align: left;
}

.repo-link {
	margin-top: -1px;
}

.icon-top {
	border-radius: 5px;
}

.changelog-list {
	font-family: Arial, -apple-system-font;
}

.bugs-list {
	font-family: Arial, -apple-system-font;
}

.link.is-supported {
	background-color: lightgreen;
	margin-top: 0px;
	margin-bottom: 0px;
	border-top: 1px solid rgba(0, 55, 0, 0.25);
	border-bottom: 1px solid rgba(0, 55, 0, 0.25);
}

.link.is-unsupported {
	background-color: #FFDDDD;
	margin-top: 0px;
	margin-bottom: 0px;
	border-top: 1px solid rgba(55, 0, 0, 0.25);
	border-bottom: 1px solid rgba(55, 0, 0, 0.25);
}

.link.is-unsupported > a > div > label.right {
	color: red !important;
}

/*ul.is-supported:after, ul.is-supported:before {
	background: rgba(0, 55, 0, 0.0);
}

ul.is-unsupported:after, ul.is-unsupported:before {
	background: rgba(255, 0, 0, 0.0);
}*/

.support-number {
	font-weight: bold;
}

.version-number {
	font-weight: bold;
}

.version-number.listed {
	font-weight: normal;
	font-size: 20px;
}

.version-number.listed.latest-ver {
	font-weight: bold;
	font-size: 25px;
}

.right {
	float: right;
	font-family: Arial, -apple-system-font;
	font-weight: normal;
	color: #8e8e9f !important;
}

/*
static const int ButtonBarWidth_ = 60;
static const int ButtonBarHeight_ = 48;
*/

